cargo-features = ["edition2021"]

[workspace]
resolver = "2"

members = [
    "accumulator",
    "agent-utils",
    "nomad-types",
    "nomad-core",
    "nomad-base",
    "nomad-test",
    "chains/nomad-ethereum",
    "agents/kathy",
    "agents/updater",
    "agents/relayer",
    "agents/watcher",
    "agents/processor",
    "agents/monitor",
    "tools/kms-cli",
    "tools/nomad-cli",
    "tools/balance-exporter",
]
