cargo-features = ["edition2021"]

[workspace]
resolver = "2"

members = [
    "accumulator",
    "nomad-types",
    "nomad-core",
    "nomad-base",
    "nomad-test",
    "chains/nomad-ethereum",
    "chains/nomad-substrate",
    "agents/kathy",
    "agents/updater",
    "agents/relayer",
    "agents/watcher",
    "agents/processor",
    "tools/kms-cli",
    "tools/nomad-cli",
    "tools/balance-exporter",
]

[patch.crates-io]
primitive-types = { git = "https://github.com/paritytech/parity-common.git", tag = "parity-util-mem-v0.10.1" }