cargo-features = ["edition2021"]

[workspace]
resolver = "2"

members = [
    "accumulator",
    "nomad-types",
    "nomad-core",
    "nomad-base",
    "nomad-test",
    "chains/nomad-ethereum",
    "chains/nomad-substrate",
    "configuration",
    "agents/kathy",
    "agents/updater",
    "agents/relayer",
    "agents/watcher",
    "agents/processor",
    "tools/kms-cli",
    "tools/nomad-cli",
    "tools/balance-exporter",
    "tools/killswitch",
]
