[package]
name = "accumulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false }
lazy_static = "1.4.0"
sha3 = "0.9.1"
thiserror = "1.0.30"
serde = {version = "1.0", features = ["derive"]}