[package]
name = "nomad-xyz-configuration"
version = "2.0.1"
edition = "2021"
authors = ["James Prestwich <james@nomad.xyz>", "The Nomad Developers <eng@nomad.xyz>"]
description = "Nomad project configuration file utilities"
repository = "https://github.com/nomad-xyz/rust"
license = "MIT OR Apache-2.0"
exclude = [
    "*.sh",
    ".git*"
]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
eyre = "0.6.6"
reqwest = "0.11.10"
tokio = { version = "1.18.2", features = ["rt", "macros"] }

[dependencies]
affix = "0.1.2"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
eyre = "0.6.6"
once_cell = "1.9.0"
serde = "1.0.136"
serde_json = "1.0.78"
serde_yaml = "0.8.23"
nomad-types = { path = "../nomad-types" }
tracing = "0.1.35"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.11.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.5"
js-sys = "0.3.56"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
nomad-test = { path = "../nomad-test" }
