[package]
name = "nomad-base"
version = "0.1.0"
authors = ["James Prestwich <james@nomad.xyz>"]
edition = "2021"


[dependencies]
# Main block
tokio = { version = "1.0.1", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
thiserror = { version = "1.0.22", default-features = false }
async-trait = { version = "0.1.42", default-features = false }
futures-util = "0.3.12"
color-eyre = "0.5.0"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
mockall = "0.10.2"
rand = "0.8.3"

nomad-xyz-configuration = { path = "../configuration" }
nomad-types = { path = "../nomad-types" }
nomad-core = { path = "../nomad-core" }
nomad-ethereum = { path = "../chains/nomad-ethereum"}
nomad-test = { path = "../nomad-test" }
affix = "0.1.2"
tracing-error = "0.1.2"

prometheus = "0.12"

warp = "0.3"

# these versions are important!
tracing-opentelemetry = "0.13.0"
opentelemetry = { version = "0.14.0", features = ["rt-tokio"] }
rusoto_core = "0.47.0"
rusoto_kms = "0.47.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"

[[example]]
name = "example"
path = "./bin/example.rs"

[[bin]]
name = "secrets-template"
path = "./src/bin/secrets_template.rs"