[package]
name = "config"
version = "0.1.0"
edition = "2021"
description = "Nomad project configuration file utilities"
repository = "https://github.com/nomad-xyz/agents"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
affix = "0.1.2"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
eyre = "0.6.6"
serde = "1.0.136"
serde_json = "1.0.78"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.56"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
