[package]
name = "nomad-core"
version = "0.1.0"
authors = ["James Prestwich <james@nomad.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false, features = ['legacy'] }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features=["aws"] }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features=["ws", "rustls"] }
hex = "0.4.3"
sha3 = "0.9.1"
thiserror = "*"
async-trait = { version = "0.1.42", default-features = false }
tokio = { version = "1.0.1", features = ["rt", "macros"] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
color-eyre = "0.5.0"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
prometheus = "0.12.0"
bytes = { version = "1", features = ["serde"]}
rusoto_core = "0.48.0"
rusoto_kms = "0.48.0"
rusoto_credential = "0.47.0"
once_cell = "1.8.0"
num = { version="0", features=["serde"] }
bincode = "1.3.3"

accumulator = { path = "../accumulator" }
nomad-types = { path = "../nomad-types" }
nomad-xyz-configuration = { path = "../configuration" }

[dev-dependencies]
tokio = { version = "1.0.1", features = ["rt", "time", "macros"] }

[features]
output = []

[[bin]]
name = "proof_output"
path = "bin/proof_output.rs"

[[bin]]
name = "lib_test_output"
path = "bin/lib_test_output.rs"

[[bin]]
name = "utils_test_output"
path = "bin/utils_test_output.rs"
