[package]
name = "nomad-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = "*"
tracing-subscriber = "0.2.15"
prometheus = "0.12"
affix = "0.1.2"
color-eyre = "0.5.0"
hex = "0.4.3"