[package]
name = "nomad-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = "*"
prometheus = "0.12"
affix = "0.1.2"
color-eyre = "0.6.0"
hex = "0.4.3"