[package]
name = "kathy"
version = "1.0.0"
authors = ["James Prestwich <james@nomad.xyz>", "Luke Tchang <luke@nomad.xyz>"]
edition = "2021"
description = "Nomad kathy agent"
repository = "https://github.com/nomad-xyz/rust"
license = "MIT OR Apache-2.0"
exclude = [
    "*.sh",
    ".git*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.42", default-features = false }
color-eyre = "0.6.0"
config = "0.10"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
futures-util = "0.3.12"
log = "0.4.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", default-features = false}
thiserror = {version = "1.0.22", default-features = false}
tokio = {version = "1.0.1", features = ["rt", "macros"]}
tracing = "0.1.35"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.14"
rand = "0.8.3"
prometheus = "0.12"
nomad-xyz-configuration = { path = "../../configuration" }

nomad-types = { path = "../../nomad-types" }
nomad-base = { path = "../../nomad-base" }
nomad-core = { path = "../../nomad-core" }
affix = "0.1.2"

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "0.6.0"
nomad-test = { path = "../../nomad-test" }
