[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["rt", "macros"] }
prometheus = "0.13.1"
tracing = "0.1.35"

ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false }

nomad-core = { path = "../../nomad-core", default-features = false }
nomad-xyz-configuration = { version = "0.1.0-rc.25", path = "../../configuration" }
tracing-subscriber = "0.2.15"
eyre = "0.6.8"
nomad-ethereum = { version = "0.1.0", path = "../../chains/nomad-ethereum" }
warp = "0.3.2"
async-trait = "0.1.56"
