[package]
name = "processor"
version = "1.1.0"
authors = ["Luke Tchang <luke@nomad.xyz>", "James Prestwich <james@nomad.xyz>"]
edition = "2021"
description = "Nomad processor agent"
repository = "https://github.com/nomad-xyz/rust"
license = "MIT OR Apache-2.0"
exclude = [
    "*.sh",
    ".git*"
]

[dependencies]
tokio = { version = "1.0.1", features = ["rt", "macros"] }
config = "0.10"
serde = "1.0.120"
serde_json = { version = "1.0.61", default-features = false }
log = "0.4.13"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
thiserror = { version = "1.0.22", default-features = false }
async-trait = { version = "0.1.42", default-features = false }
futures-util = "0.3.12"
color-eyre = "0.6.0"
tracing = "0.1.35"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.14"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
affix = "0.1.2"
prometheus = "0.12"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"

nomad-xyz-configuration = { path = "../../configuration" }
nomad-types = { path = "../../nomad-types" }
nomad-core = { path = "../../nomad-core" }
nomad-base = { path = "../../nomad-base" }

[dev-dependencies]
nomad-test = { path = "../../nomad-test" }
dotenv = "0.15.0"
serial_test = "0.6.0"