[package]
name = "nomad-substrate"
version = "0.1.0"
edition = "2021"
authors = ["Luke Tchang <luke@nomad.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# subxt = { git = "https://github.com/maticnetwork/subxt.git", branch = "main" }
subxt = "0.23.0"
affix = "0.1.2"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
async-trait = { version = "0.1.42", default-features = false }
color-eyre = "0.6.0"
sp-keyring = "6.0.0"
env_logger = "0.9.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
parity-util-mem = "0.11.0"
scale-info = { version = "2.0.0", features = ["bit-vec"] }
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time", "parking_lot"] }
tracing = "0.1.35"
tracing-futures = "0.2.5"
thiserror = "1.0.30"

nomad-xyz-configuration = { path = "../../configuration" }
nomad-core = { path = "../../nomad-core" }
nomad-types = { path = "../../nomad-types" }

ethers-core = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }

[[bin]]
name = "test"
path = "bin/test.rs"
