[package]
name = "killswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.0.1", features = ["rt", "macros"] }
color-eyre = "0.6.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
nomad-core = { path = "../../nomad-core" }
nomad-base = { path = "../../nomad-base" }
nomad-xyz-configuration = { path = "../../configuration" }
