[package]
name = "killswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.0.1", features = ["rt", "macros"] }
thiserror = { version = "1.0.22", default-features = false }
serde = "1.0.120"
serde_json = { version = "1.0.61", default-features = false }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
nomad-core = { path = "../../nomad-core" }
nomad-base = { path = "../../nomad-base" }
nomad-xyz-configuration = { path = "../../configuration" }
