[package]
name = "killswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0.1", features = ["rt", "macros"] }
futures-util = "0.3.12"
thiserror = { version = "1.0.22", default-features = false }
serde = "1.0.120"
serde_json = { version = "1.0.61", default-features = false }
serde_yaml = "0.9.14"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
nomad-core = { path = "../../nomad-core" }
nomad-base = { path = "../../nomad-base" }
nomad-xyz-configuration = { path = "../../configuration" }
nomad-ethereum = { path = "../../chains/nomad-ethereum" }

[dev-dependencies]
rusoto_mock = "0.48.0"
assert_matches = "1.5"
serial_test = "0.6.0"
nomad-test = { path = "../../nomad-test" }
nomad-types = { path = "../../nomad-types" }
