[package]
name = "kms-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features = ["aws"] }
hex = "0.4.3"
once_cell = "1.8.0"
rusoto_core = "0.48.0"
rusoto_kms = "0.48.0"
tokio = "1.9.0"
serde_json = "1.0.66"
