[package]
name = "lifeguard"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
futures = "0.3"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
